[package]
name = "cdumay_yaml"
version = "0.1.0"
edition = "2024"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library to manipulate YAML data"
documentation = "https://docs.rs/cdumay_yaml"
homepage = "https://github.com/cdumay/cdumay_yaml"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_yaml"

[dependencies]
serde_yaml = "0.9"
cdumay_core = "0.1"
serde-value = "0.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
